--- a/ch01/demo_bohr.ipynb
+++ b/ch01/demo_bohr.ipynb
@@ -5,7 +5,7 @@
    "id": "ee7748bb",
    "metadata": {},
    "source": [
-    "## DEMO: Black Body radiation"
+    "## DEMO: Quantum phenomena"
    ]
   },
   {
@@ -36,7 +36,7 @@
     "print(\"e =\", e, \"C\")\n",
     "print(\"h =\", h, \"J·s\")\n",
     "print(\"c =\", c, \"m/s\")\n",
-    "print(\"ε0 =\", epsilon0, \"F/m\")\n",
+    "print(\"ε0 =\", epsilon_0, \"F/m\")\n",
     "print(\"m_e =\", m_e, \"kg\")\n",
     "print(\"R_H =\", R_H_cm, \"cm^-1\")\n"
    ]
@@ -48,15 +48,31 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "def rydberg_cm(n1, n2):  # returns cm^-1\n",
+    "def rydberg_cm(n1, n2, Z=1):  # returns cm^-1\n",
     "\n",
-    "    return R_H_cm * (1/n1**2 - 1/n2**2)"
+    "    return R_H_cm * Z**2 * (1/n1**2 - 1/n2**2)"
    ]
   },
   {
    "cell_type": "code",
    "execution_count": null,
    "id": "05e4cb7f",
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "markdown",
+   "id": "30895050",
+   "metadata": {},
+   "source": [
+    "### Calculate wavelength of an electron"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "c385db8b",
    "metadata": {},
    "outputs": [],
    "source": []
@@ -102,6 +118,95 @@
     "plot_hydrogen_energy_levels()\n",
     "plt.show()\n"
    ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "3aed206c",
+   "metadata": {},
+   "source": [
+    "### Plot Black Body radiation curves"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "4fac45c0",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "def planck(wavelength, T):\n",
+    "    \"\"\"\n",
+    "    Planck's Law to calculate the spectral radiance of black body radiation at temperature T.\n",
+    "    \n",
+    "    Parameters:\n",
+    "    - wavelength (float): Wavelength in meters.\n",
+    "    - T (float): Absolute temperature in Kelvin.\n",
+    "    \n",
+    "    Returns:\n",
+    "    - (float): Spectral radiance in W/(m^2*sr*m).\n",
+    "    \"\"\"\n",
+    "   \n",
+    "    exponent = (h*c) / (wavelength*k*T)\n",
+    "    \n",
+    "    exponent = np.clip(exponent, None, 700)  # Clip values of exponent at 700 to avoid numerical overflow\n",
+    "\n",
+    "    return (2.0*h*c**2) / (wavelength**5 * (np.exp(exponent) - 1))\n",
+    "    \n",
+    "\n",
+    "def plot_black_body(T, show=False):\n",
+    "    \"\"\"\n",
+    "    Plot the black body radiation spectrum for a given temperature T.\n",
+    "    \"\"\"\n",
+    "\n",
+    "    # Lets pick some beautiful colors\n",
+    "    from matplotlib import cm\n",
+    "    from cycler import cycler\n",
+    "    magma = cm.get_cmap('magma', 10)  # 10 discrete colors, feel free to change\n",
+    "    plt.rcParams['axes.prop_cycle'] = cycler(color=[magma(i) for i in range(magma.N)])\n",
+    "\n",
+    "    wavelengths = np.linspace(1e-9, 5e-6, 1000)  # Wavelength range from 1 nm to 3 um\n",
+    "    intensities = planck(wavelengths, T)\n",
+    "    \n",
+    "    plt.plot(wavelengths*1e9, intensities, label=f'T={T}', lw=3)  # Convert wavelength to nm for plotting\n",
+    "    \n",
+    "    plt.xlabel('Wavelength (nm)')\n",
+    "    plt.ylabel('$Intensity (W/m^2)$')\n",
+    "    plt.grid(True)\n",
+    "    plt.legend()\n",
+    "\n",
+    "    max_int = max(planck(wavelengths, 5000)) # lets limit y axis to 5000\n",
+    "    plt.ylim(0, max_int)\n",
+    "\n",
+    "    if show: # show is needed for interactive plots\n",
+    "        plt.show() "
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "f373a8fa",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "for T in range(3000, 5000, 200):\n",
+    "    plot_black_body(T)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "fe5b2e0a",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "interactive(plot_black_body, T=(1000, 5000, 100), show=True)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "2d24decb",
+   "metadata": {},
+   "source": []
   }
  ],
  "metadata": {
