--- a/ch01/demo_bohr.ipynb
+++ b/ch01/demo_bohr.ipynb
@@ -18,7 +18,7 @@
     "import numpy as np\n",
     "import matplotlib.pyplot as plt\n",
     "from ipywidgets import interactive\n",
-    "from scipy.constants import h, c, k, e, N_A, epsilon_0, Rydberg "
+    "from scipy.constants import h, c, k, e, N_A, m_e, epsilon_0, Rydberg "
    ]
   },
   {
