'wave front propag'

--- a/ch01/demo_bohr.ipynb
+++ b/ch01/demo_bohr.ipynb
@@ -17,8 +17,18 @@
    "source": [
     "import numpy as np\n",
     "import matplotlib.pyplot as plt\n",
-    "from ipywidgets import interactive\n",
-    "from scipy.constants import h, c, k, e, N_A, m_e, epsilon_0, Rydberg "
+    "\n",
+    "\n",
+    "from scipy import constants as const\n",
+    "from scipy.constants import h, c, e, m_e, epsilon_0, Rydberg "
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "511ec13c",
+   "metadata": {},
+   "source": [
+    "- [See all the availible constants here](https://docs.scipy.org/doc/scipy/reference/constants.html)"
    ]
   },
   {
@@ -42,6 +52,30 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "id": "30895050",
+   "metadata": {},
+   "source": [
+    "### Calculate wavelength of an electron"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "01e76f55",
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "markdown",
+   "id": "5964279c",
+   "metadata": {},
+   "source": [
+    "### Write a function to make calculations easier"
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": null,
    "id": "bf1a0bf5",
@@ -51,22 +85,6 @@
     "def rydberg_cm(n1, n2, Z=1):  # returns cm^-1\n",
     "\n",
     "    return R_H_cm * Z**2 * (1/n1**2 - 1/n2**2)"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "id": "05e4cb7f",
-   "metadata": {},
-   "outputs": [],
-   "source": []
-  },
-  {
-   "cell_type": "markdown",
-   "id": "30895050",
-   "metadata": {},
-   "source": [
-    "### Calculate wavelength of an electron"
    ]
   },
   {
@@ -199,6 +217,8 @@
    "metadata": {},
    "outputs": [],
    "source": [
+    "from ipywidgets import interactive\n",
+    "\n",
     "interactive(plot_black_body, T=(1000, 5000, 100), show=True)"
    ]
   },
@@ -229,18 +249,22 @@
    ]
   },
   {
-   "cell_type": "markdown",
-   "id": "069ebe5f",
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "df3f025d",
    "metadata": {},
+   "outputs": [],
    "source": [
     "z=1+np.sqrt(3)*1j\n",
     "z"
    ]
   },
   {
-   "cell_type": "markdown",
-   "id": "13c8ef3c",
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "23b8fa54",
    "metadata": {},
+   "outputs": [],
    "source": [
     "z.real, z.imag"
    ]
