--- a/ch02/wave01.ipynb
+++ b/ch02/wave01.ipynb
@@ -2,6 +2,22 @@
  "cells": [
   {
    "cell_type": "markdown",
+   "id": "49e86d50",
+   "metadata": {},
+   "source": [
+    ":::{admonition} **What you will learn**\n",
+    ":class: note\n",
+    "\n",
+    "- **A wave is a self-propagating disturbance** that transfers energy, momentum, and information through a medium, without transporting matter. \n",
+    "- The behavior of waves is governed by the **wave equation**, a partial differential equation (PDE) that describes their spatial and temporal evolution. \n",
+    "- Two major classes of waves we will be examining are **Standing waves** which remain fixed in space, exhibiting nodes and antinodes. \n",
+    "- **Traveling waves** which propagate through space, transferring energy from one location to another.\n",
+    "\n",
+    ":::"
+   ]
+  },
+  {
+   "cell_type": "markdown",
    "id": "2706e3ea",
    "metadata": {},
    "source": [
@@ -111,7 +127,8 @@
     "ani = FuncAnimation(fig, update, frames=n_frames, init_func=init, blit=True, interval=40)\n",
     "\n",
     "# >>> Display as inline HTML (no saving needed)\n",
-    "display(HTML(ani.to_jshtml()))\n"
+    "display(HTML(ani.to_jshtml()))\n",
+    "plt.close(fig)\n"
    ]
   },
   {
@@ -151,7 +168,89 @@
     "\n",
     "$$u(x,t) = Ae^{i(kx-\\omega t)}$$\n",
     "\n",
-    ":::"
+    ":::\n",
+    "\n",
+    "- We can visualize sin and cos components on complex exponential and also visualize **the phasor** which is the change of exponential driven by chaneg of $t$ for any fixed value $x$."
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "92a27225",
+   "metadata": {
+    "tags": [
+     "hide-input"
+    ]
+   },
+   "outputs": [],
+   "source": [
+    "import numpy as np\n",
+    "import matplotlib.pyplot as plt\n",
+    "from matplotlib.animation import FuncAnimation\n",
+    "from IPython.display import HTML, display\n",
+    "\n",
+    "# -----------------------\n",
+    "# Parameters\n",
+    "# -----------------------\n",
+    "k = 2 * np.pi / 5.0         # wavenumber\n",
+    "omega = 2 * np.pi / 3.0     # angular frequency\n",
+    "x = np.linspace(-10, 10, 600)\n",
+    "x0 = 0.0                    # fixed position for phasor\n",
+    "t_step = 0.08\n",
+    "n_frames = 140              # keep size reasonable for inline JS\n",
+    "\n",
+    "# -----------------------\n",
+    "# Figure with two subplots\n",
+    "# -----------------------\n",
+    "fig, (ax_wave, ax_phasor) = plt.subplots(1, 2, figsize=(10, 4))\n",
+    "\n",
+    "# Left subplot: real and imaginary parts\n",
+    "(line_real,) = ax_wave.plot([], [], lw=2, label=\"Re$\\\\{e^{i(kx-\\\\omega t)}\\\\}$\")\n",
+    "(line_imag,) = ax_wave.plot([], [], lw=2, ls=\"--\", label=\"Im$\\\\{e^{i(kx-\\\\omega t)}\\\\}$\")\n",
+    "ax_wave.set_xlim(x.min(), x.max())\n",
+    "ax_wave.set_ylim(-1.2, 1.2)\n",
+    "ax_wave.set_xlabel(\"x\")\n",
+    "ax_wave.set_ylabel(\"Amplitude\")\n",
+    "ax_wave.set_title(\"Real and Imaginary Parts vs x\")\n",
+    "ax_wave.legend(loc=\"upper right\")\n",
+    "\n",
+    "# Right subplot: phasor\n",
+    "theta = np.linspace(0, 2*np.pi, 400)\n",
+    "ax_phasor.plot(np.cos(theta), np.sin(theta), lw=1)  # unit circle\n",
+    "(point_line,) = ax_phasor.plot([], [], lw=2)        # line from origin to tip\n",
+    "(point_tip,) = ax_phasor.plot([], [], marker='o', lw=0)\n",
+    "ax_phasor.set_aspect('equal', 'box')\n",
+    "ax_phasor.set_xlim(-1.2, 1.2)\n",
+    "ax_phasor.set_ylim(-1.2, 1.2)\n",
+    "ax_phasor.set_xlabel(\"Re\")\n",
+    "ax_phasor.set_ylabel(\"Im\")\n",
+    "ax_phasor.set_title(f\"Phasor at x0 = {x0}\")\n",
+    "\n",
+    "def init():\n",
+    "    line_real.set_data([], [])\n",
+    "    line_imag.set_data([], [])\n",
+    "    point_line.set_data([], [])\n",
+    "    point_tip.set_data([], [])\n",
+    "    return (line_real, line_imag, point_line, point_tip)\n",
+    "\n",
+    "def update(frame):\n",
+    "    t = frame * t_step\n",
+    "    phase = k * x - omega * t\n",
+    "    # Left subplot updates\n",
+    "    line_real.set_data(x, np.cos(phase))\n",
+    "    line_imag.set_data(x, np.sin(phase))\n",
+    "    # Right subplot updates (phasor at x0)\n",
+    "    angle = k * x0 - omega * t\n",
+    "    z = np.cos(angle) + 1j*np.sin(angle)\n",
+    "    point_line.set_data([0, z.real], [0, z.imag])\n",
+    "    point_tip.set_data([z.real], [z.imag])\n",
+    "    return (line_real, line_imag, point_line, point_tip)\n",
+    "\n",
+    "ani = FuncAnimation(fig, update, frames=n_frames, init_func=init, blit=True, interval=40)\n",
+    "\n",
+    "# Display as inline HTML JS animation; then close to avoid duplicate static rendering\n",
+    "display(HTML(ani.to_jshtml()))\n",
+    "plt.close(fig)\n"
    ]
   },
   {
