--- a/_sources/ch01/demo_bohr.ipynb
+++ b/_sources/ch01/demo_bohr.ipynb
@@ -20,7 +20,7 @@
     "\n",
     "\n",
     "from scipy import constants as const\n",
-    "from scipy.constants import h, c, e, m_e, epsilon_0, Rydberg "
+    "from scipy.constants import h, c, e, k, m_e, epsilon_0, Rydberg "
    ]
   },
   {
