--- a/_sources/ch02/wave_eq.ipynb
+++ b/_sources/ch02/wave_eq.ipynb
@@ -274,7 +274,7 @@
    "metadata": {},
    "source": [
     ":::{admonition} **Application: Damped Oscillator**\n",
-    ":class: tip, admonition\n",
+    ":class: tip, dropdown\n",
     "\n",
     "Damped Harmonic oscillator is described by the following homogeneous second-order system\n",
     "\n",
@@ -320,89 +320,6 @@
     "$$\n",
     "\n",
     ":::"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "id": "e26091ec",
-   "metadata": {
-    "tags": [
-     "hide-input"
-    ]
-   },
-   "outputs": [],
-   "source": [
-    "import numpy as np\n",
-    "import matplotlib.pyplot as plt\n",
-    "from matplotlib.animation import FuncAnimation\n",
-    "from IPython.display import HTML\n",
-    "\n",
-    "# ---- Parameters ----\n",
-    "omega0 = 2*np.pi        # natural frequency (rad/s)\n",
-    "x0, v0 = 1.0, 0.0       # initial conditions\n",
-    "t_end, fps = 6.0, 30\n",
-    "t = np.linspace(0, t_end, int(t_end*fps)+1)\n",
-    "\n",
-    "# ---- Solution for x'' + 2ζω0 x' + ω0^2 x = 0 ----\n",
-    "def x_solution(t, zeta, omega0=omega0, x0=x0, v0=v0):\n",
-    "    if np.isclose(zeta, 1.0):  # critical\n",
-    "        return np.exp(-omega0*t) * (x0 + (v0 + omega0*x0)*t)\n",
-    "    if zeta < 1.0:             # underdamped (complex roots)\n",
-    "        omegad = omega0*np.sqrt(1 - zeta**2)\n",
-    "        A = x0\n",
-    "        B = (v0 + zeta*omega0*x0)/omegad\n",
-    "        return np.exp(-zeta*omega0*t) * (A*np.cos(omegad*t) + B*np.sin(omegad*t))\n",
-    "    # overdamped (real roots)\n",
-    "    s = np.sqrt(zeta**2 - 1.0)\n",
-    "    r1, r2 = -omega0*(zeta - s), -omega0*(zeta + s)\n",
-    "    A = (v0 - r2*x0)/(r1 - r2); B = x0 - A\n",
-    "    return A*np.exp(r1*t) + B*np.exp(r2*t)\n",
-    "\n",
-    "zetas = [0.0, 0.2, 1.0, 1.5]\n",
-    "titles = [r\"No damping $(\\zeta=0)$\",\n",
-    "          r\"Underdamped $(\\zeta=0.2)$\",\n",
-    "          r\"Critical $(\\zeta=1)$\",\n",
-    "          r\"Overdamped $(\\zeta=1.5)$\"]\n",
-    "\n",
-    "# Precompute all signals & global y-lims for stable axes\n",
-    "xs = [x_solution(t, z) for z in zetas]\n",
-    "ymax = max(np.max(np.abs(x)) for x in xs)\n",
-    "ylims = (-1.1*ymax, 1.1*ymax)\n",
-    "\n",
-    "# ---- Figure & artists ----\n",
-    "fig, axes = plt.subplots(2, 2, figsize=(10, 6), sharex=True, sharey=True)\n",
-    "axes = axes.ravel()\n",
-    "lines = []\n",
-    "cursors = []\n",
-    "\n",
-    "for ax, title in zip(axes, titles):\n",
-    "    ax.set_title(title)\n",
-    "    ax.set_xlim(0, t_end); ax.set_ylim(*ylims)\n",
-    "    ax.set_xlabel(\"time t (s)\"); ax.set_ylabel(\"x(t)\")\n",
-    "    (line,) = ax.plot([], [], lw=2)\n",
-    "    cursor = ax.axvline(0, ls=\"--\", lw=1)\n",
-    "    lines.append(line); cursors.append(cursor)\n",
-    "\n",
-    "# ---- Animation update ----\n",
-    "def init():\n",
-    "    for line, cur in zip(lines, cursors):\n",
-    "        line.set_data([], [])\n",
-    "        cur.set_xdata(0)\n",
-    "    return lines + cursors\n",
-    "\n",
-    "def update(frame):\n",
-    "    tt = t[:frame+1]\n",
-    "    for i, (line, cur) in enumerate(zip(lines, cursors)):\n",
-    "        line.set_data(tt, xs[i][:frame+1])\n",
-    "        cur.set_xdata(t[frame])\n",
-    "    return lines + cursors\n",
-    "\n",
-    "anim = FuncAnimation(fig, update, init_func=init,\n",
-    "                     frames=len(t), interval=1000/fps, blit=True)\n",
-    "plt.close(fig)  # avoid duplicate static render\n",
-    "\n",
-    "HTML(anim.to_jshtml())\n"
    ]
   },
   {
