--- a/_sources/ch02/wave_eq.ipynb
+++ b/_sources/ch02/wave_eq.ipynb
@@ -233,8 +233,6 @@
     "  \\beta = \\frac{n \\pi}{L}\n",
     "  $$\n",
     "\n",
-    "  Thus:\n",
-    "\n",
     "  $$\n",
     "  X(x) = B \\sin \\left(\\frac{n \\pi}{L} x \\right)\n",
     "  $$\n",
@@ -264,60 +262,8 @@
     "T(t) = D_n \\cos(\\omega_n t) + E_n \\sin(\\omega_n t)\n",
     "$$\n",
     "\n",
-    "- where $\\omega_n = \\beta v = \\frac{n \\pi v}{L}$.\n",
-    ":::"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "id": "8b8034ca",
-   "metadata": {},
-   "source": [
-    ":::{admonition} **Application: Damped Oscillator**\n",
-    ":class: tip, dropdown\n",
     "\n",
-    "Damped Harmonic oscillator is described by the following homogeneous second-order system\n",
-    "\n",
-    "- Where ethe $\\zeta$ is a damping parameter and $\\omega_0$ vibrational frequency\n",
-    "\n",
-    "$$\n",
-    "x'' + 2\\zeta\\omega_0\\,x' + \\omega_0^2\\,x = 0\n",
-    "$$\n",
-    "\n",
-    "$$\n",
-    "r^2 + 2\\zeta\\omega_0\\,r + \\omega_0^2 = 0,\n",
-    "\\qquad\n",
-    "r = -\\zeta\\omega_0 \\pm \\sqrt{\\zeta^2\\omega_0^2 - \\omega_0^2}.\n",
-    "$$\n",
-    "\n",
-    "**1. Underdamped** $0 \\le \\zeta < 1$\n",
-    "\n",
-    "$$\n",
-    "r = -\\zeta\\omega_0 \\pm i\\,\\omega_d,\\quad \\omega_d=\\omega_0\\sqrt{1-\\zeta^2}\n",
-    "$$\n",
-    "\n",
-    "$$\n",
-    "x(t)=e^{-\\zeta\\omega_0 t}\\big(A\\cos \\omega_d t + B\\sin \\omega_d t\\big)\n",
-    "$$\n",
-    "\n",
-    "\n",
-    "- **Imaginary part** $i\\omega_d$ lead to oscillations; \n",
-    "- **real part** $-\\zeta\\omega_0$ lead to exponential decay.\n",
-    "\n",
-    "**2. Critically damped** $(\\zeta=1)$:  Double real root $r=-\\omega_0$.\n",
-    "  \n",
-    "$$\n",
-    "x(t)=e^{-\\omega_0 t}(C_1 + C_2 t)\n",
-    "$$\n",
-    "\n",
-    "Fastest non-oscillatory return to equilibrium.\n",
-    "\n",
-    "- **Overdamped** $(\\zeta>1)$:  Two distinct real roots $r_{1,2}<0$.\n",
-    "\n",
-    "\n",
-    "$$\n",
-    "x(t)=C_1 e^{r_1 t}+C_2 e^{r_2 t}\n",
-    "$$\n",
+    "$$\\omega_n = \\beta v = \\frac{n \\pi v}{L}$$\n",
     "\n",
     ":::"
    ]
@@ -341,6 +287,50 @@
     "\n",
     "The first seven solutions (normal modes) of spatial part of the wave equation on a length $L$ with two amplitudes (one positive and one negative).\n",
     ":::"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "f541b8aa",
+   "metadata": {
+    "tags": [
+     "hide-input"
+    ],
+    "vscode": {
+     "languageId": "plaintext"
+    }
+   },
+   "outputs": [],
+   "source": [
+    "import numpy as np\n",
+    "import matplotlib.pyplot as plt\n",
+    "\n",
+    "# Parameters\n",
+    "L = 1.0\n",
+    "B = 1.0\n",
+    "ns = [1, 2, 3, 4]\n",
+    "x = np.linspace(0, L, 800)\n",
+    "\n",
+    "# 2x2 subplot\n",
+    "fig, axes = plt.subplots(2, 2, figsize=(8, 6))\n",
+    "\n",
+    "for ax, n in zip(axes.ravel(), ns):\n",
+    "    Xn = B * np.sin(n * np.pi * x / L)\n",
+    "    ax.plot(x, Xn, color=\"C0\")\n",
+    "    ax.axhline(0, color=\"black\", linewidth=0.8)\n",
+    "    ax.set_title(f\"n = {n}\")\n",
+    "    ax.set_xlabel(\"x\")\n",
+    "    ax.set_ylabel(\"X(x)\")\n",
+    "    ax.set_xlim(0, L)\n",
+    "\n",
+    "fig.suptitle(\"Normal modes of a fixed–fixed string\")\n",
+    "fig.tight_layout(rect=[0, 0, 1, 0.96])\n",
+    "\n",
+    "# Save PNG for use in slides\n",
+    "out_path_subplots = \"/mnt/data/modes-subplots.png\"\n",
+    "plt.savefig(out_path_subplots, dpi=300, bbox_inches=\"tight\")\n",
+    "out_path_subplots\n"
    ]
   },
   {
@@ -384,13 +374,9 @@
     ":::\n",
     "\n",
     "\n",
-    ":::{figure-md} markdown-fig\n",
+    "#### About nodes \n",
     "\n",
-    "<img src=\"./images/Standing_waves_on_a_string.gif\" alt=\"applied photoelectric\" class=\"bg-primary mb-1\" width=\"50%\">\n",
-    "\n",
-    "Presented are first six solutions from $n=0,1,2,3,4,5$\n",
-    ":::\n",
-    "\n",
+    "Places where guitar string is at the resting position at 0 are called **nodes.** We notice that number of nodal points increases with n. \n",
     "\n",
     "- **For $n = 1$**: There are 0 nodes (excluding the endpoints). This is called the fundamental frequency or first harmonic.\n",
     "\n",
@@ -399,6 +385,88 @@
     "- **For $n = 3$**: There are 2 nodes. This is called the second overtone or third harmonic.\n",
     "\n",
     "- Note that the general solution to wave equation is expressed as **a linear combination of all normal modes**  "
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "c9a1b22e",
+   "metadata": {
+    "tags": [
+     "hide-input"
+    ]
+   },
+   "outputs": [],
+   "source": [
+    "import numpy as np\n",
+    "import matplotlib.pyplot as plt\n",
+    "from matplotlib.animation import FuncAnimation\n",
+    "from IPython.display import HTML\n",
+    "\n",
+    "# Parameters (reduced frames for faster export)\n",
+    "L = 1.0\n",
+    "v = 1.0\n",
+    "B = 1.0\n",
+    "A = {1: 1.0, 2: 1.0, 3: 1.0}\n",
+    "phi = {1: 0.0, 2: 0.0, 3: 0.0}\n",
+    "\n",
+    "x = np.linspace(0, L, 600)\n",
+    "\n",
+    "def X(n, x):\n",
+    "    return np.sin(n * np.pi * x / L)\n",
+    "\n",
+    "def T(n, t):\n",
+    "    omega_n = n * np.pi * v / L\n",
+    "    return np.cos(omega_n * t + phi[n])\n",
+    "\n",
+    "def u_mode(n, x, t):\n",
+    "    return B * X(n, x) * T(n, t)\n",
+    "\n",
+    "def u_sum(modes, x, t):\n",
+    "    s = np.zeros_like(x)\n",
+    "    for n in modes:\n",
+    "        s += A[n] * X(n, x) * T(n, t)\n",
+    "    return s\n",
+    "\n",
+    "omega1 = np.pi * v / L\n",
+    "T1 = 2 * np.pi / omega1\n",
+    "tmax = 2 * T1\n",
+    "frames = 120  # fewer frames\n",
+    "ts = np.linspace(0, tmax, frames)\n",
+    "\n",
+    "fig, axes = plt.subplots(2, 2, figsize=(8, 6))\n",
+    "axes = axes.ravel()\n",
+    "titles = [\"n = 1\", \"n = 3\", \"n = 1 + 2\", \"n = 1 + 2 + 3\"]\n",
+    "lines = []\n",
+    "for ax, title in zip(axes, titles):\n",
+    "    ax.set_xlim(0, L)\n",
+    "    ax.set_ylim(-1.6, 1.6)\n",
+    "    ax.set_xlabel(\"x\")\n",
+    "    ax.set_ylabel(\"u(x,t)\")\n",
+    "    ax.set_title(title)\n",
+    "    ax.axhline(0, linewidth=0.8)\n",
+    "    line, = ax.plot([], [])\n",
+    "    lines.append(line)\n",
+    "\n",
+    "fig.suptitle(\"Standing waves on a fixed–fixed string\")\n",
+    "\n",
+    "def init():\n",
+    "    for line in lines:\n",
+    "        line.set_data([], [])\n",
+    "    return lines\n",
+    "\n",
+    "def update(idx):\n",
+    "    t = ts[idx]\n",
+    "    lines[0].set_data(x, u_mode(1, x, t))\n",
+    "    lines[1].set_data(x, u_mode(3, x, t))\n",
+    "    lines[2].set_data(x, u_sum([1, 2], x, t))\n",
+    "    lines[3].set_data(x, u_sum([1, 2, 3], x, t))\n",
+    "    return lines\n",
+    "\n",
+    "anim = FuncAnimation(fig, update, frames=frames, init_func=init, blit=True, interval=1000*(tmax/frames))\n",
+    "\n",
+    "plt.close(fig)  # Prevents static display of the last frame\n",
+    "HTML(ani.to_jshtml())\n"
    ]
   },
   {
@@ -584,6 +652,105 @@
     "\n",
     "This solution describes the vibration modes of a 2D rectangular membrane, with each mode characterized by different integer values of $n$ and $m$.\n",
     ":::"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "9aa24945",
+   "metadata": {
+    "tags": [
+     "hide-input"
+    ]
+   },
+   "outputs": [],
+   "source": [
+    "import numpy as np  \n",
+    "import matplotlib.pyplot as plt\n",
+    "import ipywidgets\n",
+    "from ipywidgets import interact, interactive, Dropdown\n",
+    "from matplotlib.animation import FuncAnimation\n",
+    "from IPython.display import HTML\n",
+    "\n",
+    "import plotly.graph_objects as go\n",
+    "from plotly.subplots import make_subplots\n",
+    "\n",
+    "def membrane2d_mode(n=1, m=1, t=0):\n",
+    "    \"\"\"\n",
+    "    Calculates the 2D grid of points (X, Y) and the normal mode displacement (Z) of a vibrating \n",
+    "    rectangular membrane at a specific time t.\n",
+    "\n",
+    "    Parameters:\n",
+    "    n (int): Mode number along the x-direction. Default is 1.\n",
+    "    m (int): Mode number along the y-direction. Default is 1.\n",
+    "    t (float): Time at which to evaluate the normal mode. Default is 0.\n",
+    "\n",
+    "    Returns:\n",
+    "    X, Y, Z (numpy arrays): Grid of points in the X-Y plane and the corresponding \n",
+    "                            membrane displacement Z(X, Y, t).\n",
+    "    \"\"\"\n",
+    "    \n",
+    "    # Constants\n",
+    "    Lx, Ly = 1.0, 1.0  # Dimensions of the rectangular region\n",
+    "    v = 0.1            # Wave speed \n",
+    "    omega = v * np.pi / Lx * (n**2 + m**2)  # Angular frequency for the normal mode\n",
+    "    \n",
+    "    # Create a spatial grid\n",
+    "    Nx, Ny = 100, 100  # Number of grid points in each dimension\n",
+    "    x, y = np.linspace(0, Lx, Nx), np.linspace(0, Ly, Ny)\n",
+    "    X, Y = np.meshgrid(x, y)\n",
+    "\n",
+    "    # Compute the spatial part of the normal mode\n",
+    "    Z = np.sin(m * np.pi * X / Lx) * np.sin(n * np.pi * Y / Ly) * np.cos(omega * t)\n",
+    "    \n",
+    "    return X, Y, Z\n",
+    "\n",
+    "def viz_membrane2d_plotly(n=1, m=1, t=0): \n",
+    "    \"\"\"\n",
+    "    Visualizes the 2D normal modes of a vibrating membrane on a square geometry using Plotly.\n",
+    "    \n",
+    "    This function displays both a 2D contour plot and a 3D surface plot of the membrane displacement.\n",
+    "\n",
+    "    Parameters:\n",
+    "    n (int): Mode number along the x-direction. Default is 1.\n",
+    "    m (int): Mode number along the y-direction. Default is 1.\n",
+    "    t (float): Time at which to evaluate the normal mode. Default is 0.\n",
+    "    \"\"\"\n",
+    "    \n",
+    "    # Get the membrane displacement at time t\n",
+    "    X, Y, Z = membrane2d_mode(n, m, t)\n",
+    "    \n",
+    "    # Create a Plotly subplot with 2 views: 2D contour and 3D surface\n",
+    "    fig = make_subplots(\n",
+    "        rows=1, \n",
+    "        cols=2, \n",
+    "        subplot_titles=('2D Contour Plot', '3D Surface Plot'),\n",
+    "        specs=[[{\"type\": \"contour\"}, {\"type\": \"surface\"}]]\n",
+    "    )\n",
+    "    \n",
+    "    # Add 2D contour plot to the left side\n",
+    "    fig.add_trace(\n",
+    "        go.Contour(x=X.flatten(), y=Y.flatten(), z=Z.flatten(), colorscale='RdBu'),\n",
+    "        row=1, col=1\n",
+    "    )\n",
+    "\n",
+    "    # Add 3D surface plot to the right side\n",
+    "    fig.add_trace(\n",
+    "        go.Surface(x=X, y=Y, z=Z, colorscale='RdBu'),\n",
+    "        row=1, col=2\n",
+    "    )\n",
+    "\n",
+    "    # Update the layout for better visualization\n",
+    "    fig.update_layout(\n",
+    "        title_text=\"2D Contour and 3D Surface Plots of Membrane Vibrational Normal Modes\",\n",
+    "        width=1000,\n",
+    "        height=500\n",
+    "    )\n",
+    "    \n",
+    "    # Show the figure\n",
+    "    fig.show()\n",
+    "\n",
+    "interact(viz_membrane2d_plotly, n=(1,1), m=(2,3), t=(0,100))"
    ]
   },
   {
