--- a/ch02/wave_eq.ipynb
+++ b/ch02/wave_eq.ipynb
@@ -143,7 +143,7 @@
     "**Example ODE**\n",
     "\n",
     "$$\n",
-    "\\frac{d^2 y}{dx^2} +4=0\n",
+    "\\frac{d^2 y}{dx^2} +4y = 0\n",
     "$$\n",
     "\n",
     "- For instnace if we plug $y=e^{kx}$ in the following equation and cancel exponents on both sides we will get algebraic equation in terms of k. \n",
@@ -459,7 +459,7 @@
     "    lines[3].set_data(x, u_sum([1, 2, 3], x, t))\n",
     "    return lines\n",
     "\n",
-    "anim = FuncAnimation(fig, update, frames=frames, init_func=init, blit=True, interval=1000*(tmax/frames))\n",
+    "ani = FuncAnimation(fig, update, frames=frames, init_func=init, blit=True, interval=1000*(tmax/frames))\n",
     "\n",
     "plt.close(fig)  # Prevents static display of the last frame\n",
     "HTML(ani.to_jshtml())\n"
