--- a/ch02/wave_eq.ipynb
+++ b/ch02/wave_eq.ipynb
@@ -130,7 +130,9 @@
     "\n",
     "**Going from ODE to algebraic equations**\n",
     "\n",
-    "- To solve linear and homogenuous ODEs we plug exponential function, e.g $e^{kx}$ and turn roblem from differential to algebraic one solving for parameter $k$. In our case of second order wave equation we will be dealing with simple quadratic equations. \n",
+    "- To solve **linear** (no powers of y) and **homogenuous** (no constants, right hand side is zero) ODEs we plug exponential function, e.g $y(x) \\rightarrow e^{kx}$.\n",
+    "- What this does to ODE is turn it into simple  algebraic equation where the only variable is$k$.\n",
+    "- In our case of second order wave equation we will be dealing with simple quadratic equations: \n",
     "\n",
     "$$ax^2 + bx + c = 0,$$\n",
     "\n",
