--- a/_sources/ch02/wave_eq.ipynb
+++ b/_sources/ch02/wave_eq.ipynb
@@ -134,13 +134,19 @@
     "- What this does to ODE is turn it into simple  algebraic equation where the only variable is$k$.\n",
     "- In our case of second order wave equation we will be dealing with simple quadratic equations: \n",
     "\n",
-    "$$ax^2 + bx + c = 0,$$\n",
+    "$$a y^{''} + by^{'} + cy = 0$$\n",
+    "\n",
+    "$$ak^2 + bk + c = 0,$$\n",
     "\n",
     "The solutions of which are given as:\n",
     "\n",
     "$$\n",
-    "x = \\frac{-b \\pm \\sqrt{b^2 - 4ac}}{2a}.\n",
+    "k_{1,2} = \\frac{-b \\pm \\sqrt{b^2 - 4ac}}{2a}.\n",
     "$$\n",
+    "\n",
+    "- The most general solution is then written in terms of linear combination. We need extra info to determine c_1 and c_2 (e.g boundary or initial conditions)\n",
+    "\n",
+    "$$y = c_1e^{k_1}+c_2 e^{k_2}$$\n",
     "\n",
     "**Example ODE**\n",
     "\n",
