--- a/ch03/wave_fun.ipynb
+++ b/ch03/wave_fun.ipynb
@@ -61,17 +61,26 @@
     "- Before introducing quantum mechanics and wavefunctions, let’s recall some core ideas from probability.\n",
     "\n",
     "#### Random Variables\n",
-    "- A **random variable** assigns numbers to the outcomes of an experiment.  \n",
+    "\n",
+    "- A **random variable** assigns numbers to the outcomes of an experiment. E.g how many squirrels you see every day is a random variable. \n",
     "- **Discrete examples**: dice rolls, coin flips.  \n",
     "- **Continuous examples**: particle position, measurement noise.  \n",
     "\n",
     "#### Probability Distributions\n",
     "\n",
+    "- A continuous random variable is fully described by a distribution of all posisble values. We call this object a probability distributions $p(x)$ which must be integrated (summed in case of discrete) to one showing that we cover all possibilities and that each possibility is assigned a fraction of 1. \n",
     "\n",
-    "A continuous random variable is fully described by a distribution of all posisble values. We call this object a probability distributions $p(x)$ which must be integrated (summed in case of discrete) to one showing that we cover all possibilities and that each possibility is assigned a fraction of 1. \n",
+    ":::{admonition} **Rules of Probabilities**\n",
+    ":class: important\n",
     "\n",
-    "- **Non-negative**: $p(x) \\geq 0$.  \n",
-    "- **Normalized**: $\\int_{-\\infty}^{\\infty} p(x)\\,dx = 1$.  \n",
+    "- **Non-negative**: \n",
+    "\n",
+    "$$p(x) \\geq 0$$\n",
+    "\n",
+    "\n",
+    "- **Normalized**: \n",
+    "\n",
+    "$$\\int_{-\\infty}^{\\infty} p(x)\\,dx = 1$$  \n",
     "\n",
     "- **Mean (expectation)**:  \n",
     "\n",
@@ -85,6 +94,7 @@
     "  \\sigma^2 = \\langle x^2 \\rangle - \\langle x \\rangle^2\n",
     "  $$\n",
     "\n",
+    ":::\n",
     "\n",
     "#### Further Exploration\n",
     "- [Video overview](https://www.youtube.com/watch?v=QxqxdQ_g2uw)  \n",
